[package]
name = "malloc_size_of"
version = "1.1.24"
authors = ["The Servo Project Developers", "Thomas Krause <thomaskrause@posteo.de>"]
license = "MIT"
description = "This is a fork of the `malloc_size_of` crate, which is part of the Servo codebase,"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["euclid", "serde", "serde_json", "smallvec", "hashbrown", "hibitset", "specs", "beach_map", "lyon", "rstar"]

[dependencies]
euclid =  { version = "0.22.6", optional = true}
serde = { version = "1.0.27", optional = true }
serde_bytes = { version = "0.10", optional = true }
serde_json = {version = "1.0.79", features = ["raw_value"], optional = true }
smallbitvec = {version = "2.1.0", optional = true }
smallvec = {version = "1.7.0", optional = true }
string_cache = { version = "0.7", optional = true }
time = { version = "0.1.17", optional = true }
url = { version = "1.2", optional = true }
void = { version = "1.0.2", optional = true }
hashbrown = { version="0.11", optional = true }
hibitset = { version = "0.6.3", optional = true }
specs = { version= "0.17", default-features = false, features=["serde", "storage-event-control"], optional= true }
beach_map = { version = "^0.1", optional = true }
lyon = { version ="0.17.10", optional = true }
rstar = { version = "0.9.2", optional = true}
winapi = { version ="0.3.9", features=['heapapi']}