[package]
name = "malloc_size_of"
version = "1.1.36"
authors = ["The Servo Project Developers", "Thomas Krause <thomaskrause@posteo.de>"]
license = "MIT"
description = "This is a fork of the `malloc_size_of` crate, which is part of the Servo codebase,"
readme = "README.md"
edition= "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["euclid", "serde", "serde_json", "smallvec", "hashbrown", "hibitset", "specs", "beach_map", "lyon", "arrayvec"]

[dependencies]
euclid =  { version = "0.22.7", optional = true}
serde = { version = "1.0.27", optional = true }
serde_bytes = { version = "0.11.12", optional = true }
serde_json = {version = "1.0.79", features = ["raw_value"], optional = true }
smallbitvec = {version = "2.1.0", optional = true }
smallvec = {version = "1.7.0", optional = true }
arrayvec = {version = "0.7.1", optional = true}
string_cache = { version = "0.8.7", optional = true }
time = { version = "0.3.28", optional = true }
url = { version = "2.4.1", optional = true }
void = { version = "1.0.2", optional = true }
hashbrown = { version= "0.14.0", optional = true }
hibitset = { version = "0.6.3", optional = true }
specs = { version= "0.19.0", default-features = false, features=["serde", "storage-event-control"], optional= true }
beach_map = { version = "0.2.1", optional = true }
lyon = { version ="1.0.0", optional = true }
rstar = { version = "0.11.0", optional = true}
winapi = { version ="0.3.9", features=['heapapi']}