[package]
name = "malloc_size_of"
version = "1.1.37"
authors = ["The Servo Project Developers", "Thomas Krause <thomaskrause@posteo.de>"]
license = "MIT"
description = "This is a fork of the `malloc_size_of` crate, which is part of the Servo codebase,"
readme = "README.md"
edition= "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["euclid", "serde", "serde_json", "smallvec", "hashbrown", "hibitset", "specs", "beach_map", "lyon", "arrayvec"]

[dependencies]
euclid =  { version = "0.22.9", optional = true}
serde = { version = "1.0.194", optional = true }
serde_bytes = { version = "0.11.13", optional = true }
serde_json = {version = "1.0.110", features = ["raw_value"], optional = true }
smallbitvec = {version = "2.5.1", optional = true }
smallvec = {version = "1.8.0", optional = true }
arrayvec = {version = "0.7.4", optional = true}
string_cache = { version = "0.8.7", optional = true }
time = { version = "0.3.31", optional = true }
url = { version = "2.5.0", optional = true }
void = { version = "1.0.2", optional = true }
hashbrown = { version= "0.14.3", optional = true }
hibitset = { version = "0.6.4", optional = true }
specs = { version= "0.20.0", default-features = false, features=["serde", "storage-event-control"], optional= true }
beach_map = { version = "0.2.1", optional = true }
lyon = { version ="1.0.1", optional = true }
rstar = { version = "0.11.0", optional = true}
winapi = { version ="0.3.9", features=['heapapi']}